completed migration from 'blog' app to 'quiz' app

--- a/django_quiz/quiz/templates/quiz/home.html
+++ b/django_quiz/quiz/templates/quiz/home.html
@@ -1,9 +1,9 @@
-{% extends "blog/base.html" %}
+{% extends "quiz/base.html" %}
 {% block content %}
     <div class="row searchFilter">
     <div class="col-sm-12">
     <div class="input-group">
-    <input type="text" id="myFilter" class="form-control" onkeyup="filterFunction()" placeholder="Search...">
+        <input type="text" id="myFilter" class="form-control" onkeyup="filterFunction()" placeholder="Search...">
         <div class="nav-item dropdown">
             <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="label-icon"></span>
