--- a/django_quiz/quiz/templates/quiz/quiz_confirm_delete.html
+++ b/django_quiz/quiz/templates/quiz/quiz_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "quiz/base.html" %}
 {% block content %}
     <div class="card card-signin my-3">
         <div class="card-body">
