--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "quiz/base.html" %}
 {% block content %}
     <main role="main" class="container">
         <div class="row">
