--- a/django_quiz/quiz/templates/quiz/quiz_form.html
+++ b/django_quiz/quiz/templates/quiz/quiz_form.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "quiz/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="card card-signin my-3">
