--- a/django_quiz/users/templates/users/password_reset_done.html
+++ b/django_quiz/users/templates/users/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "quiz/base.html" %}
 {% block content %}
     <div class="alert alert-info">
         An e-mail has been sent with instructions to reset your password.
