--- a/django_quiz/users/templates/users/profile.html
+++ b/django_quiz/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "quiz/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="card card-signin my-3">
