--- a/django_quiz/quiz/static/quiz/main.css
+++ b/django_quiz/quiz/static/quiz/main.css
@@ -93,8 +93,8 @@ body {
 
   .quiz-detail-img {
     width: 100%;
-    max-width: 600px;
-    height: auto;
+    max-width: 800px;
+    height: 50vh;
     object-fit: contain;
   }
 
@@ -292,5 +292,9 @@ body {
     .searchFilter .dropdown-menu-right {
       right: 0px;
     }
+  }
+
+  .ans-text {
+    font-size: 150%;
   }
 
