--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -44,14 +44,14 @@
                                 <div class="row justify-content-start align-items-center mt-3 bg-green">
                                     <!-- Answers -->
                                     <div class="col-sm">
-                                        <div class="col ans-text text-left"><b>a)    </b>{{ object.ansA }}</div>
-                                        <div class="col ans-text text-left"><b>b)    </b>{{ object.ansB }}</div>
-                                        <div class="col ans-text text-left"><b>c)    </b>{{ object.ansC }}</div>
-                                        <div class="col ans-text text-left"><b>d)    </b>{{ object.ansD }}</div>
-                                        <div class="col ans-text text-left"><b>e)    </b>{{ object.ansE }}</div>
+                                        <div class="col ans-text text-left bg-steel-2"><b>a)    </b>{{ object.ansA }}</div>
+                                        <div class="col ans-text text-left bg-steel-2"><b>b)    </b>{{ object.ansB }}</div>
+                                        <div class="col ans-text text-left bg-steel-2"><b>c)    </b>{{ object.ansC }}</div>
+                                        <div class="col ans-text text-left bg-steel-2"><b>d)    </b>{{ object.ansD }}</div>
+                                        <div class="col ans-text text-left bg-steel-2"><b>e)    </b>{{ object.ansE }}</div>
                                     </div>
                                     <!-- Timer -->
-                                    <div class="row justify-content-end">
+                                    <div class="row justify-content-end bg-dark-green">
                                         <div class="col text-center font-weight-bold display-1"><span id="time">{{ object.duration }}</span></div>
                                     </div>
                                 </div>
