--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -59,7 +59,7 @@
                             <!-- Footer Buttons -->
                             <div class"container">
                                 <div class="quiz-footer bg-red" id="btn_footer">
-                                    <button class="btn btn-outline-info btn-sm" type="button" id="play_btn">Play</button>
+                                    <button class="btn btn-outline-info btn-sm mb-1 mr-1" type="button" id="play_btn">Play</button>
                                 </div>
                             </div>
                         </div>
