--- a/django_quiz/users/templates/users/password_reset_confirm.html
+++ b/django_quiz/users/templates/users/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% extends "quiz/base.html" %}
-{% load crispy_forms_tags %}
+{% load bootstrap %}
 {% block content %}
     <div class="content-section">
         <form method="POST">
@@ -8,7 +8,7 @@
                 <legend class="border-bottom mb-4">
                     Reset Password
                 </legend>
-                {{ form|crispy }}
+                {{ form|bootstrap }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Reset Password</button>
