--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -1,6 +1,7 @@
 {% extends "quiz/base.html" %}
 {% block content %}
     <h1 class="mb-3">Quizzes by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <!-- Filter / Search -->
     <div class="row searchFilter">
     <div class="col-sm-12">
     <div class="input-group">
@@ -24,6 +25,7 @@
     </div>
     </div>
     </div>
+    <!-- Quizzes -->
     <div id="myItems">
     {% for quiz in quizzes %}
         <div class="card card-signin my-3">
