added some kind of automatic fullscreen

--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -1,6 +1,6 @@
 {% extends "quiz/base.html" %}
 {% block content %}
-    <h1 class="mb-3">Quizzes by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <h1 class="mb-3">Quizzes by {{ view.kwargs.username }}</h1>
     <!-- Filter / Search -->
     <div class="row searchFilter">
     <div class="col-sm-12">
