--- a/django_quiz/quiz/static/quiz/main.css
+++ b/django_quiz/quiz/static/quiz/main.css
@@ -14,6 +14,7 @@ body {
   
   .bg-steel {
     background-color: #3c7390; /* #5f788a */
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
   }
   .bg-steel-2 {
     background-color: #5f788a;
