--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -5,9 +5,9 @@
     <div class="row searchFilter">
     <div class="col-sm-12">
     <div class="input-group">
-    <input type="text" id="myFilter" class="form-control" onkeyup="filterFunction()" placeholder="Search...">
+        <input type="text" id="myFilter" class="form-control" onkeyup="filterFunction()" placeholder="Search...">
         <div class="nav-item dropdown">
-            <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="label-icon"></span>
                 <span class="caret">&nbsp;</span>
             </button>
