--- a/django_quiz/quiz/static/quiz/main.css
+++ b/django_quiz/quiz/static/quiz/main.css
@@ -122,7 +122,7 @@ body {
     height: 100%;
     max-height: 33vh;
     width: auto;
-    object-fit: contain;
+    
   }
   
   /* .quiz-show-img {
@@ -326,7 +326,11 @@ body {
   }
 
   .quiz-body {
-    height: 98vh;  
+    height: 98vh;
+  }
+
+  .quiz-body2 {
+    width: 100vw;
   }
 
   .quiz-footer {
@@ -336,4 +340,12 @@ body {
     width: 100%;
     text-align: end;
     visibility: hidden;
+  }
+
+  .mt-8{
+    margin-top: 80px;
+  }
+
+  .mt-10{
+    margin-top: 100px;
   }
